<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blood Donation Record</string>
    <string name="proud">Proud to be a blood donor</string>
    <string name="appeal">Donate Blood. Save Lives.</string>
    <string name="action_settings">Settings</string>
    <string name="enter_details">Enter blood donation details</string>
    <string name="title_activity_get_donation_details">getDonationDetails</string>
    <string name="hello_world">Hello world!</string>
    <string name="pick_date">Pick date</string>
    <string name="pick_location">Location</string>
    <string name="pick_organisers">Who were the organisers?</string>
    <string name="reminder_switch">Remind me when I\'m eligible to donate again</string>
    <string name="save">Save</string>
    <string name="warning">Please fill all the fields</string>
    <string name="title_activity_view_previous_records">ViewPreviousRecords</string>
    <string name="confirmation">New record added</string>
    <string name="serial">Donation no.</string>
    <string name="date">Date: </string>
    <string name="location">Location: </string>
    <string name="organisers">Organisers: </string>
    <string name="reminder">Reminder set: </string>



</resources>
